--- a/index.html
+++ b/index.html
@@ -1050,7 +1050,7 @@
           mother:
             "💗 Mẹ ơi, con chúc mẹ luôn mạnh khỏe, an yên và mỉm cười thật nhiều, cảm ơn mẹ vì đã dành cả yêu thương để nuôi con nên người 💝",
           crush:
-            "💞 Hôm nay 20/10 chúc chị thật vui vẻ sau này thật hạnh phúc ",
+            "💞 Hôm nay 20/10 chúc chị thật vui vẻ sau này thật hạnh phúc, cuộc sống không còn 1 tí tiêu cực nào luôn đặc biệt là ngày càng xinh xắn dễ thương nhó 🌷",
         },
         typeSpeed: 30,
         heartsCount: 15,
@@ -2159,15 +2159,15 @@
                 greet: "Gửi Mẹ Yêu 💐",
                 hint: "🌸 Có vài dòng nhỏ con muốn gửi mẹ 🌸<br>💝 Hãy mở thư và đọc nhé 💕",
                 btn: "💗 Mở Thư 💗",
-                thanks: "💐 Con yêu mẹ nhiều 💐",
+                thanks: "Con yêu mẹ nhiều",
                 title: "Thiệp Cho Mẹ 💗",
               },
               crush: {
                 greet: "Chào người làm tim anh loạn nhịp 💞",
-                hint: "💖 Có điều nhỏ anh muốn nói... 💌<br>🌷 Hãy mở thư nhé 🌷",
+                hint: "💖 Có điều nhỏ em muốn nói... 💌<br>🌷 Hãy mở thư nhé 🌷",
                 btn: "💞 Mở Thư 💞",
-                thanks: "💘 Cảm ơn em đã đọc 💘",
-                title: "Thiệp Cho Crush 💞",
+                thanks: "Cảm ơn chị đã đọc",
+                title: "Thiệp Cho 💞",
               },
             }[type] || {};
           const letterHeader = document.getElementById("letterHeader");
