--- a/index.html
+++ b/index.html
@@ -1034,7 +1034,7 @@
           mother:
             "💗 Mẹ ơi, con chúc mẹ luôn mạnh khỏe, an yên và mỉm cười thật nhiều, cảm ơn mẹ vì đã dành cả yêu thương để nuôi con nên người 💝",
           crush:
-            "💞 Hôm nay 20/10, em chúc chị thật vui vẻ, sau này luôn luôn hạnh phúc, cuộc sống không còn chút tiêu cực nào và nhớ giữ gìn sức khỏe và đặc biệt là ngày càng xinh xắn, dễ thương hơn nhé 💐",
+            "💞 Hôm nay 20/10, em chúc chị thật vui vẻ, sau này luôn luôn hạnh phúc, cuộc sống không còn chút tiêu cực nào và nhớ giữ gìn sức khỏe và đặc biệt là ngày càng xinh đẹp và dễ thương hơn nhé 💐",
         },
         typeSpeed: 30,
         heartsCount: 15,
