--- a/index.html
+++ b/index.html
@@ -809,6 +809,75 @@
         z-index: 5; /* luôn nằm trên */
         /* background: transparent; */
       }
+      .password-overlay {
+        position: fixed;
+        inset: 0;
+        background: rgba(255, 255, 255, 0.9);
+        backdrop-filter: blur(10px);
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        z-index: 999;
+      }
+
+      .password-box {
+        background: white;
+        padding: 30px 40px;
+        border-radius: 20px;
+        box-shadow: 0 10px 40px rgba(0, 0, 0, 0.1);
+        text-align: center;
+        animation: fadeIn 0.6s ease;
+      }
+
+      .password-box h2 {
+        color: var(--text-color, #ff5a8b);
+        margin-bottom: 15px;
+        font-family: "Quicksand", sans-serif;
+      }
+
+      .password-box input {
+        width: 100%;
+        padding: 12px 15px;
+        border-radius: 12px;
+        border: 2px solid #ff8fab;
+        font-size: 16px;
+        outline: none;
+        margin-bottom: 15px;
+        transition: 0.3s;
+      }
+
+      .password-box input:focus {
+        border-color: #ff5a8b;
+        box-shadow: 0 0 10px rgba(255, 90, 139, 0.2);
+      }
+
+      .password-box button {
+        background: linear-gradient(135deg, #ff5a8b, #ff8fab);
+        border: none;
+        color: white;
+        border-radius: 50px;
+        padding: 12px 30px;
+        font-family: "Dancing Script", cursive;
+        font-size: 18px;
+        cursor: pointer;
+        transition: 0.3s;
+      }
+
+      .password-box button:hover {
+        transform: scale(1.05);
+        box-shadow: 0 5px 15px rgba(255, 90, 139, 0.3);
+      }
+
+      @keyframes fadeIn {
+        from {
+          opacity: 0;
+          transform: scale(0.9);
+        }
+        to {
+          opacity: 1;
+          transform: scale(1);
+        }
+      }
     </style>
   </head>
   <body>
@@ -821,6 +890,23 @@
     <!-- <button class="music-toggle" id="musicToggle" title="Bật/tắt nhạc">
       🎵
     </button> -->
+    <div class="password-overlay" id="passwordOverlay" style="display: none">
+      <div class="password-box">
+        <h2>🔒 Nhập mật khẩu để mở thiệp</h2>
+        <input
+          type="password"
+          id="passwordInput"
+          placeholder="Nhập mật khẩu..."
+        />
+        <button id="passwordSubmit">Mở thiệp 💌</button>
+        <p
+          id="passwordError"
+          style="color: #ff4d6d; margin-top: 10px; display: none"
+        >
+          Sai mật khẩu rồi nha 😅
+        </p>
+      </div>
+    </div>
     <div class="bicycle-container" id="bicycleContainer">
       <img
         src="https://media0.giphy.com/media/v1.Y2lkPTc5MGI3NjExOXdsZDBvZmMxcW9senF4cWlrazl5aW9zZ3pyeGZkM2FsZXEyNWhsNiZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9cw/W23haVmnrOuh1wsZt0/giphy.gif"
@@ -2072,6 +2158,79 @@
 
       document.addEventListener("DOMContentLoaded", () => {
         // 🌸 Xác định loại thiệp theo query string (?type=friend|mother|crush)
+        // 🔒 Nếu là thiệp mẹ => yêu cầu nhập pass
+        if (messageType === "mother") {
+          const overlay = document.getElementById("passwordOverlay");
+          const input = document.getElementById("passwordInput");
+          const button = document.getElementById("passwordSubmit");
+          const error = document.getElementById("passwordError");
+          const main = document.getElementById("mainContainer");
+
+          // ✅ Danh sách mật khẩu, nội dung & chữ ký riêng
+          const motherLetters = {
+            me123: {
+              message:
+                "💗 Mẹ ơi, cảm ơn mẹ vì luôn yêu thương và chăm sóc con vô điều kiện. Chúc mẹ mãi luôn mạnh khỏe, vui vẻ, và mỉm cười mỗi ngày 🌷",
+              signature: "– Con Nguyên 💖",
+            },
+            "0608": {
+              message:
+                "Chúc mẹ của con 20/10 vui vẻ và thật hạnh phúc. Chúc mẹ kiếm được thật nhiều tiền, mọi sự đều hanh thông để khong còn áp lực tiền bạc nữa nha. Chúc mẹ thật nhiều thật nhiều sức khoẻ để chờ con kiếm xiền đưa mẹ đi du lịch nhéee 🌷",
+              signature: "Bé Nhi 💐",
+            },
+            thanhha: {
+              message:
+                "💖 Mẹ Thanh Hà, con chúc mẹ thật nhiều sức khỏe, luôn hạnh phúc bên gia đình nhỏ và lúc nào cũng xinh đẹp rạng ngời 💝",
+              signature: "– Cậu Út 💌",
+            },
+            meheo: {
+              message:
+                "🐷 Mẹ Heo đáng yêu, chúc mẹ luôn vui vẻ, ít lo nghĩ và có thật nhiều ngày an yên, tràn đầy tiếng cười 💞",
+              signature: "– Thằng con hay đói bụng 😋",
+            },
+          };
+
+          overlay.style.display = "flex";
+          main.style.filter = "blur(8px)";
+          main.style.pointerEvents = "none";
+
+          button.addEventListener("click", () => {
+            const pass = input.value.trim().toLowerCase();
+
+            if (motherLetters[pass]) {
+              const { message, signature } = motherLetters[pass];
+
+              // ✅ Gán nội dung và chữ ký riêng
+              CONFIG.messages.mother = message;
+
+              // Cập nhật chữ ký
+              const letterSig = document.getElementById("letterSignature");
+              if (letterSig) letterSig.innerHTML = signature;
+
+              // 🔓 Hiệu ứng mở khóa
+              gsap.to(overlay, {
+                opacity: 0,
+                duration: 0.6,
+                ease: "power2.inOut",
+                onComplete: () => {
+                  overlay.style.display = "none";
+                  main.style.filter = "none";
+                  main.style.pointerEvents = "auto";
+                  gsap.from("#mainContainer", {
+                    opacity: 0,
+                    scale: 0.9,
+                    duration: 0.6,
+                  });
+                },
+              });
+            } else {
+              // ❌ Sai pass
+              error.style.display = "block";
+              gsap.fromTo(error, { opacity: 0 }, { opacity: 1, duration: 0.4 });
+              input.value = "";
+            }
+          });
+        }
 
         function getShareLink(currentType) {
           const code = TYPE_TO_CODE[currentType] || TYPE_TO_CODE["friend"];
